Add command line and browser tests. Change virtualization library.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>SVG Editor</title>
         <base href="./dist/">
         <link href="style.css" rel="stylesheet">
     </head>
